新增财务接口

--- a/apps/Fmis/report/result_2021-09-24-11_41_39.html
+++ b/apps/Fmis/report/result_2021-09-24-11_41_39.html
@@ -189,7 +189,7 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>财务系统-接口自动化报告,测试结果如下:</h1>
-<p class='attribute'><strong>Start Time:</strong> 2021-09-24 10:43:55</p>
+<p class='attribute'><strong>Start Time:</strong> 2021-09-24 11:41:39</p>
 <p class='attribute'><strong>Duration:</strong> 0:00:00.000998</p>
 <p class='attribute'><strong>Status:</strong> Error 1</p>
 
@@ -222,7 +222,7 @@ function showOutput(id, name) {
 </tr>
 
 <tr class='errorClass'>
-    <td>test_queryCapitalIncome.Test_queryCapitalIncome</td>
+    <td>apps.Fmis.test.case.test_queryCapitalIncome.Test_queryCapitalIncome</td>
     <td>1</td>
     <td>0</td>
     <td>0</td>
@@ -245,7 +245,9 @@ function showOutput(id, name) {
         </div>
         <pre>
         
-ft1.1: Traceback (most recent call last):
+ft1.1: D:\pythonProject\InterfaceAutoTest\apps\utils\date_operate_util.py:70: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime instead.
+  year = datetime.date.today().year
+Traceback (most recent call last):
   File "D:\pythonProject\InterfaceAutoTest\apps\Fmis\test\case\test_queryCapitalIncome.py", line 35, in testCase01
     paramsList = self.queryCapitalIncome()
   File "D:\pythonProject\InterfaceAutoTest\apps\Fmis\test\case\test_queryCapitalIncome.py", line 24, in queryCapitalIncome
